--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ts-hooks",
-  "version": "1.0.0",
-  "description": "",
+  "name": "tapable-ts",
+  "version": "0.0.0",
+  "description": "A TS implementation of tapable",
   "main": "./dist/hooks.js",
   "module": "./dist/hooks.mjs",
   "types": "./dist/hooks.d.ts",
@@ -12,15 +12,12 @@
   "author": "Adam Dierkens <adam@dierkens.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/benchmark": "^2.1.1",
     "@types/jest": "^27.5.0",
-    "benchmark": "^2.1.4",
     "esbuild": "^0.14.38",
     "jest": "^28.1.0",
     "rollup": "^2.72.1",
     "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-esbuild": "^4.9.1",
-    "tapable": "^2.2.1",
     "ts-jest": "^28.0.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
