--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "build": "rollup -c",
     "test": "jest"
   },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "siddeEffects": false,
   "author": "Adam Dierkens <adam@dierkens.com>",
   "license": "MIT",
@@ -23,6 +27,7 @@
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
+  "prettier": {},
   "volta": {
     "node": "16.15.0",
     "yarn": "1.22.18"
