--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "types": "./dist/hooks.d.ts",
   "scripts": {
     "build": "rollup -c",
-    "test": "jest"
+    "test": "jest",
+    "release": "auto shipit -vv",
+    "labelCheck": "auto pr-check",
+    "lint": "eslint src --cache",
+    "prepare": "is-ci || husky install"
   },
   "files": [
     "dist",
@@ -34,6 +38,7 @@
   "homepage": "https://github.com/adierkens/tapable-ts#readme",
   "sideEffects": false,
   "devDependencies": {
+    "@design-systems/eslint-config": "^2.17.8",
     "@types/jest": "^27.5.0",
     "esbuild": "^0.14.38",
     "jest": "^28.1.0",
@@ -42,7 +47,12 @@
     "rollup-plugin-esbuild": "^4.9.1",
     "ts-jest": "^28.0.1",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.2",
+    "auto": "10.31.0",
+    "husky": "^7.0.0",
+    "is-ci": "^3.0.0"
   },
   "prettier": {},
   "volta": {
