--- a/package.json
+++ b/package.json
@@ -40,19 +40,20 @@
   "devDependencies": {
     "@design-systems/eslint-config": "^2.17.8",
     "@types/jest": "^27.5.0",
+    "auto": "10.31.0",
     "esbuild": "^0.14.38",
+    "husky": "^7.0.0",
+    "is-ci": "^3.0.0",
     "jest": "^28.1.0",
+    "jest-junit": "^15.0.0",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.2",
     "rollup": "^2.72.1",
     "rollup-plugin-dts": "^4.2.1",
     "rollup-plugin-esbuild": "^4.9.1",
     "ts-jest": "^28.0.1",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.4",
-    "lint-staged": "^11.0.0",
-    "prettier": "^2.3.2",
-    "auto": "10.31.0",
-    "husky": "^7.0.0",
-    "is-ci": "^3.0.0"
+    "typescript": "^4.6.4"
   },
   "prettier": {},
   "volta": {
